--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
 		<p class="left" style="padding-top: 5px;"><a href="">Vorp Territory Map</a></p>
 		<ul class="right">
 			<div class="dropdown">
+				
+				<a href="https://discord.gg/wCp7V6G6cA" target="_blank"><button class="btn btn-primary">Discord Join</button></a>
+				
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Select Map Type
 				</button>
