--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="stylesheet" href="fontawesome/css/font-awesome.css">
 	<link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 	<script src="js/libs/jquery-min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -27,7 +28,7 @@
 		<ul class="right">
 			<div class="dropdown">
 				
-				<a href="https://discord.gg/wCp7V6G6cA" target="_blank"><button class="btn btn-primary">Discord Join</button></a>
+				<a href="https://discord.gg/wCp7V6G6cA" target="_blank"> <i class="fa-solid fa-user"></i> <button class="btn btn-primary">Discord Join</button></a>
 				
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Select Map Type
