--- a/index.html
+++ b/index.html
@@ -121,5 +121,6 @@
 	<div id="typeDetails" class="types"></div>
 
 	<div id="types" class="types"></div>
+	<a href="https://discord.gg/wCp7V6G6cA" target="_blank"> <button class="btn btn-primary"><i class="fa-brands fa-discord"></i> Discord Join</button></a>
 </body>
 </html>
