--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<ul class="right">
 			<div class="dropdown">
 				
-				<a href="https://discord.gg/wCp7V6G6cA" target="_blank"> <button class="btn btn-primary"><i class="fa-brands fa-discord"></i> Discord Join</button></a>
+				<a href="https://discord.gg/ZAJuQHXBkP" target="_blank"> <button class="btn btn-primary"><i class="fa-brands fa-discord"></i> Discord Join</button></a>
 				
 				<button class="btn btn-secondary dropdown-toggle" type="button" id="ddmenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Select Map Type
